(library (name stub) (libraries base64) (modules stub))
(rule (target stub.ml) (deps 1.x.ml) (action (copy %{deps} %{target}))
      (enabled_if (< %{version:base64} 2.0.0)))
(rule (target stub.ml) (deps 2.x.ml) (action (copy %{deps} %{target}))
      (enabled_if (and (>= %{version:base64} 2.0.0)
                       (< %{version:base64} 3.0.0))))
(rule (target stub.ml) (deps 3.0.0.ml) (action (copy %{deps} %{target}))
      (enabled_if (= %{version:base64} 3.0.0)))
(rule (target stub.ml) (deps now.ml) (action (copy %{deps} %{target}))
      (enabled_if (>= %{version:base64} 3.1.0)))
